2019-05-03  Florian Weimer  <fweimer@redhat.com>

	* misc/tst-tsearch.c (walk_tree): Add more error checking.

2019-05-02  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #24506]
	* elf/tst-pldd.c (in_str_list): New function.
	(do_test): Add default names for ld and libc as one option.

2019-05-02  Florian Weimer  <fweimer@redhat.com>

	misc: Add twalk_r function.
	* include/search.h (__twalk_r): Declare.
	* manual/examples/twalk.c: New file.
	* manual/search.texi (Tree Search Function): Document twalk_r.
	* misc/Versions (2.30): Export twalk_r.
	(GLIBC_PRIVATE): Export __twalk_r.
	* misc/search.h [__USE_GNU] (twalk_r): Declare.
	* misc/tsearch.c (trecurse_r, __twalk_r): New functions.
	(twalk_r): Add weak alias.
	* misc/tst-tsearch.c (struct walk_trace_element): Define.
	(walk_trace): New variable.
	(struct twalk_with_twalk_r_closure): Define.
	(twalk_with_twalk_r_action): New function.
	(twalk_with_twalk_r): Likewise.
	(walk_action): Call walk_trace_add.
	(walk_tree_with): Rename from walk_tree.  Add walk argument.
	(walk_tree): New function.
	* sysdeps/mach/hurd/i386/libc.abilist (GLIBC_2.30): Add twalk_r.
	* sysdeps/unix/sysv/linux/aarch64/libc.abilist (GLIBC_2.30):
	Likewise.
	* sysdeps/unix/sysv/linux/alpha/libc.abilist (GLIBC_2.30):
	Likewise.
	* sysdeps/unix/sysv/linux/arm/libc.abilist (GLIBC_2.30): Likewise.
	* sysdeps/unix/sysv/linux/csky/libc.abilist (GLIBC_2.30): Likewise.
	* sysdeps/unix/sysv/linux/hppa/libc.abilist (GLIBC_2.30): Likewise.
	* sysdeps/unix/sysv/linux/i386/libc.abilist (GLIBC_2.30): Likewise.
	* sysdeps/unix/sysv/linux/ia64/libc.abilist (GLIBC_2.30): Likewise.
	* sysdeps/unix/sysv/linux/m68k/coldfire/libc.abilist (GLIBC_2.30):
	Likewise.
	* sysdeps/unix/sysv/linux/m68k/m680x0/libc.abilist (GLIBC_2.30):
	Likewise.
	* sysdeps/unix/sysv/linux/microblaze/libc.abilist (GLIBC_2.30):
	Likewise.
	* sysdeps/unix/sysv/linux/mips/mips32/fpu/libc.abilist
	(GLIBC_2.30): Likewise.
	* sysdeps/unix/sysv/linux/mips/mips32/nofpu/libc.abilist