@@ -1,5 +1,11 @@
 2019-05-03  Florian Weimer  <fweimer@redhat.com>
 
+	* nptl/sem_close.c (struct walk_closure): Define.
+	(walker): Adjust for __twalk_r.
+	(sem_close): Call __twalk_r.
+
+2019-05-03  Florian Weimer  <fweimer@redhat.com>
+
 	* misc/tst-tsearch.c (walk_tree): Add more error checking.
 
 2019-05-02  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
